Began using the actual Core Data relationships for the models. This seems to have broken the way objects are being observed, so it will need to be looked at.

--- a/SymtomTracker/Base.lproj/LaunchScreen.storyboard
+++ b/SymtomTracker/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +12,51 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="symptoms_whitebg" translatesAutoresizingMaskIntoConstraints="NO" id="3ZC-KV-uSk">
+                                <rect key="frame" x="16" y="0.0" width="382" height="896"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Symptom Tracker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpV-Bf-IXW">
+                                <rect key="frame" x="25" y="84" width="364" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright 2020, Brent Michalski" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8E-tE-cEa">
+                                <rect key="frame" x="0.0" y="828" width="414" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xpV-Bf-IXW" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Dau-i8-Bf6"/>
+                            <constraint firstAttribute="bottom" secondItem="3ZC-KV-uSk" secondAttribute="bottom" id="KQF-Qa-3ox"/>
+                            <constraint firstItem="xpV-Bf-IXW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="25" id="N15-yZ-DK6"/>
+                            <constraint firstItem="3ZC-KV-uSk" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-16" id="NqO-SV-6aF"/>
+                            <constraint firstItem="3ZC-KV-uSk" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="QlI-Bv-iZW"/>
+                            <constraint firstItem="xpV-Bf-IXW" firstAttribute="centerX" secondItem="3ZC-KV-uSk" secondAttribute="centerX" id="Ubf-dl-6iA"/>
+                            <constraint firstItem="3ZC-KV-uSk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="VRD-0C-SIl"/>
+                            <constraint firstItem="xpV-Bf-IXW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="WHK-A4-Qdm"/>
+                            <constraint firstItem="3ZC-KV-uSk" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="crU-oz-P32"/>
+                            <constraint firstItem="3ZC-KV-uSk" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="lA3-95-HIo"/>
+                            <constraint firstItem="R8E-tE-cEa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nnK-XH-nSD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R8E-tE-cEa" secondAttribute="trailing" id="rnM-ue-rsj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R8E-tE-cEa" secondAttribute="bottom" constant="16" id="wsx-kJ-yZp"/>
+                            <constraint firstItem="R8E-tE-cEa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ySV-fG-lbj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="symptoms_whitebg" width="798" height="1024"/>
+    </resources>
 </document>
